folder_watcher 추가

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,35 @@ x64/Release/rest_client_test.exe.gta.testdurations
 x64/Release/rest_client_test.pdb
 x64/Release/vc142.pdb
 x64/Release/vcpkg.applocal.log
+.vs/rest_client/v16/ipch/4a70ba4fb75e370c.ipch
+.vs/rest_client/v16/ipch/AutoPCH/344d07be7512cf84/FOLDER_WATHCER.ipch
+.vs/rest_client/v16/ipch/AutoPCH/963b1e1d876df385/MY_CLIENT.ipch
+.vs/rest_client/v16/ipch/AutoPCH/d3d80cae7bb08c8e/FOLDER_WATHCER.ipch
+.vs/rest_client/v16/ipch/AutoPCH/e7a0ea7b3b50e5ec/MAIN.ipch
+.vs/rest_client/v16/ipch/AutoPCH/fb0720a8f7f428bc/FOLDER_OBSERVER.ipch
+x64/Debug/cpprest_2_10d.dll
+x64/Debug/folder_wathcer.obj
+x64/Debug/main.obj
+x64/Debug/my_client.obj
+x64/Debug/rest_client.exe
+x64/Debug/rest_client.exe.recipe
+x64/Debug/rest_client.ilk
+x64/Debug/rest_client.log
+x64/Debug/rest_client.pdb
+x64/Debug/rest_client.tlog/CL.command.1.tlog
+x64/Debug/rest_client.tlog/CL.read.1.tlog
+x64/Debug/rest_client.tlog/CL.write.1.tlog
+x64/Debug/rest_client.tlog/link.command.1.tlog
+x64/Debug/rest_client.tlog/link.read.1.tlog
+x64/Debug/rest_client.tlog/link.write.1.tlog
+x64/Debug/rest_client.tlog/rest_client.lastbuildstate
+x64/Debug/rest_client.tlog/rest_client.write.1u.tlog
+x64/Debug/rest_client.vcxproj.CopyComplete
+x64/Debug/rest_client.vcxproj.FileListAbsolute.txt
+x64/Debug/rest_client_test.pdb
+x64/Debug/vc142.idb
+x64/Debug/vc142.pdb
+x64/Debug/vcpkg.applocal.log
+x64/Release/folder_wathcer.obj
+x64/Release/rest_client.Build.CppClean.log
+x64/Release/rest_client.lib
