change_info_queue 추가 및 folderWatcher 이동 생성자 제거

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,6 @@ x64/Debug/rest_client.tlog/Lib-link.write.1.tlog
 x64/Debug/rest_client.tlog/Lib.command.1.tlog
 x64/Debug/rest_client_test.exe
 x64/Debug/rest_client_test.ilk
+*.ipch
+*.testlog
+*.obj
