FIleInfo 자료형 수정
1. FIleInfo size int64_t으로 수정
2. FileInfo time format 수정

--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,11 @@ x64/Debug/rest_client_test.ilk
 *.dll
 *.iobj
 *.ipdb
+*.manifest
+*.vcxproj
+*.filters
+*.user
+*.log
+x64/Debug/monitor_client.vcxproj.FileListAbsolute.txt
+x64/Release/monitor_client.vcxproj.FileListAbsolute.txt
+*.CopyComplete
