--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@ x64/Debug/monitor_client.vcxproj.FileListAbsolute.txt
 x64/Release/monitor_client.vcxproj.FileListAbsolute.txt
 *.CopyComplete
 *.idb
+*.enc
